[project]
name = "pv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ctx400", email = "43049420+ctx400@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "attrs>=25.3.0",
    "cattrs>=24.1.3",
    "click>=8.2.0",
    "cryptography>=44.0.3",
]

[project.scripts]
pv = "pv:pv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pdoc>=15.0.3",
]
