[project]
name = "pv"
version = "1.0.2"
description = "The PV Secrets Vault"
readme = "README.md"
license = "MIT"
authors = [
    { name = "ctx400", email = "43049420+ctx400@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "attrs>=25.3.0",
    "cattrs>=24.1.3",
    "click>=8.2.0",
    "cryptography>=45.0.2",
]

[project.scripts]
pv = "pv.cli:pv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pdoc>=15.0.3",
]
